--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,28 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  /*background-color: var(--bg-color);*/
+}
+
+:root .theme_dark {
+  /* Дублируем переменные для тёмной темы */
+  --main-font: "IBM Plex mono", sans-serif;
+  --font-size: 18px;
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --main-title-color: #db00ff;
+  --text-color: #f1b2ce;
+  --title-text-color: #000028;
+  --button-corners-color: #ff0070;
+  --button-corners-color-hover: rgba(255, 0, 112, 0.4);
+  --text-weight: 400;
+  --title-text-weight: 700;
+  --line-height: 23.4px;
+  --line-height-decor-text: 25px;
+  --line-height-button-text: 18px;
+  --line-height-main-title: 95.7px;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--accent-color);
 }
