--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,20 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --main-font: "IBM Plex mono", sans-serif;
+  --font-size: 18px;
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --button-corners-color: #ff0070;
+  --button-corners-color-hover: rgba(255, 0, 112, 0.4);
+  --main-title-color: #db00ff;
+  --text-color: #f1b2ce;
+  --title-text-color: #000028;
+  --text-weight: 400;
+  --title-text-weight: 700;
+  --line-height: 23.4px;
+  --line-height-decor-text: 25px;
+  --line-height-button-text: 18px;
+  --line-height-main-title: 95.7px;
+}
