--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,14 +9,13 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  /*background-color: var(--bg-color);*/
 }
 
 :root .theme_dark {
   /* Дублируем переменные для тёмной темы */
-  --main-font: "IBM Plex mono", sans-serif;
+  --main-font: "IBM Plex mono", monospace;
   --font-size: 18px;
-  --bg-color: #000028;
+  --bg-image: url(../images/cover-image-dark.png);
   --accent-color: #ff0070;
   --main-title-color: #db00ff;
   --text-color: #f1b2ce;
