--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,11 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  /*background-image: var(--background-image);*/
-  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .header {
@@ -14,11 +17,6 @@
   block-size: 100vh;
   min-block-size: 668px;
   padding: 10px;
-  background-image: url(../images/cover-image-dark.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
 }
 
 @media (width >= 768px) {
@@ -119,7 +117,6 @@
 
 @media (width >= 1024px) {
   .header__theme-menu {
-    display: flex;
     justify-content: center;
     align-items: start;
     margin-block-start: 0;
@@ -134,7 +131,6 @@
 
 @media (width >= 1024px) {
   .header__theme-menu-list {
-    display: flex;
     flex-direction: row;
   }
 }
@@ -179,7 +175,6 @@
 }
 
 .header__main-title {
-  min-block-size: 192px;
   font-family: var(--main-font);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   color: var(--main-title-color);
@@ -192,12 +187,7 @@
   .header__main-title {
     display: flex;
     align-items: center;
-    font-family: var(--main-font);
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    color: var(--main-title-color);
-    font-weight: var(--title-text-weight);
-    line-height: var(--line-height-main-title);
-    text-shadow: 4px 4px 0 var(--accent-color);
     margin-inline-start: -20px;
   }
 }
@@ -205,7 +195,6 @@
 .intro_title {
   justify-self: end;
   align-self: center;
-  min-block-size: 117px;
   max-inline-size: 364px;
   font-family: var(--main-font);
   font-size: var(--font-size);
@@ -214,24 +203,10 @@
   color: var(--title-text-color);
 }
 
-@media (width >= 768px) {
-  .intro_title {
-    margin-block-end: 45px;
-  }
-}
-
 @media (width >= 1024px) {
   .intro_title {
-    justify-self: end;
-    align-self: center;
-    min-block-size: 71px;
     max-inline-size: 491px;
-    font-family: var(--main-font);
-    font-size: var(--font-size);
-    font-weight: var(--title-text-weight);
-    line-height: var(--line-height);
-    color: var(--title-text-color);
-    margin-block-end: 32px;
+    margin-block-start: 16px;
   }
 }
 
@@ -271,10 +246,7 @@
 
 @media (width >= 1024px) {
   .why {
-    display: grid;
     grid-template-columns: min(315px) auto;
-    gap: 20px;
-    margin-block-end: 40px;
   }
 }
 
@@ -309,17 +281,12 @@
 
 @media (width >= 1024px) {
   .what-title {
-    display: grid;
     grid-template-columns: min(315px) auto;
-    min-block-size: 70px;
     margin-block-end: 0;
   }
 
   .how-to {
-    display: grid;
     grid-template-columns: min(315px) auto;
-    gap: 20px;
-    margin-block-end: 60px;
   }
 }
 
@@ -420,7 +387,7 @@
 }
 
 .content-section__list-link {
-  text-shadow: 1px 2px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
   text-decoration: none;
 }
 
@@ -439,17 +406,19 @@
   inline-size: 100%;
 }
 
+.picture-section__item {
+  object-fit: cover;
+  inline-size: 100%;
+}
+
 @media (width >= 768px) {
   .picture-section__pictures {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
 
   .picture-section__item {
-    object-fit: cover;
     object-position: center;
-    inline-size: 100%;
     block-size: 100%;
   }
 
@@ -478,11 +447,6 @@
   }
 }
 
-.picture-section__item {
-  object-fit: cover;
-  inline-size: 100%;
-}
-
 .picture-section__title {
   font-family: var(--main-font);
   font-size: var(--font-size);
@@ -508,10 +472,19 @@
   block-size: 100vh;
   min-block-size: 668px;
   padding: 10px;
+}
+
+.footer__title {
   font-family: var(--main-font);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   color: var(--main-title-color);
   font-weight: var(--title-text-weight);
   line-height: var(--line-height-main-title);
   text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width >= 768px) {
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
